# nickel-export

./: .gitignore  AGENTS.md  Cargo.toml  README.md  flake.nix  license-policy.tsv
.github/workflows/: nix-flake-check.yml
cairn-policy/: UPSTREAM.md  contracts.ncl  default.ncl
cairn/archive/2026-07-13-atomic-artifact-materialization/: design.md  tasks.md  validation.md
cairn/archive/2026-07-13-bind-evaluator-execution/: design.md  proposal.md  tasks.md  validation.md
cairn/archive/2026-07-13-bound-evaluator-execution/: design.md  proposal.md
cairn/archive/2026-07-13-canonicalize-evidence-identities/: design.md  proposal.md  tasks.md  validation.md
cairn/archive/2026-07-13-confine-evaluator-inputs/: design.md  proposal.md  tasks.md  validation.md
cairn/archive/2026-07-13-declared-input-identity/: design.md  tasks.md
cairn/archive/2026-07-13-property-and-fuzz-rails/: design.md  proposal.md  validation.md
cairn/archive/2026-07-13-validate-evidence-types/: proposal.md
cairn/archive/2026-07-13-verify-identity-primitives/: design.md  tasks.md  validation.md
cairn/archive/2026-07-13-verify-manifest-integrity/: design.md  proposal.md  tasks.md
cairn/archive/2026-07-14-replay-evaluation-determinism/: design.md  tasks.md  validation.md
cairn/archive/2026-07-14-separate-core-license-boundary/: design.md  proposal.md  tasks.md
cairn/changes/atomic-artifact-materialization/: proposal.md  tasks.md
cairn/changes/bind-evaluator-execution/: tasks.md
cairn/changes/bound-evaluator-execution/: tasks.md  (+1 more)
config/: contracts.ncl  repository.ncl  resource-limits.ncl
config/tests/: license-map.reversed.invalid.ncl  license-map.unknown-package.invalid.ncl  license-map.valid.ncl
crates/nickel-export/: Cargo.toml
crates/nickel-export-core/: Cargo.toml
crates/nickel-export-core/src/: lib.rs
crates/nickel-export/src/: lib.rs  main.rs
docs/: examples.md  inventory.md  licensing.md  migration.md  schemas.md
examples/service-config/: contract.ncl  request.json  service.ncl
fixtures/: config.ncl  contract.ncl
fixtures/requests/: json.json  raw.json  toml.json  unsafe.json  yaml.json
fuzz/: Cargo.toml
fuzz/corpus/wire/: unknown-field-request.json  valid-request.json
fuzz/fuzz_targets/: wire.rs
proofs/: README.md  contracts.ncl  correspondence-vectors.json  evidence.ncl  identity_primitives.rs
release/: evidence.md  profile.ncl
tools/: check-license-boundary.rs
(+28 files in other folders)
