[package]
name = "nickel-export-fuzz"
version = "0.0.0"
edition = "2024"
publish = false

[package.metadata]
cargo-fuzz = true

[workspace]

[dependencies]
libfuzzer-sys = "0.4"
nickel-export = { path = "../crates/nickel-export" }
nickel-export-core = { path = "../crates/nickel-export-core", features = ["serde"] }
serde_json = "1"

[[bin]]
name = "wire"
path = "fuzz_targets/wire.rs"
test = false
doc = false
bench = false
