[package]
name = "nickel-export-core"
description = "Evaluator-neutral deterministic Nickel export identities and receipts"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true

[features]
default = ["serde"]
serde = ["dep:serde", "dep:serde_json"]

[dependencies]
blake3.workspace = true
serde = { workspace = true, optional = true }
serde_json = { workspace = true, optional = true }

[lints]
workspace = true
